# medMarket

./: .gitignore  FIXES_COMPLETE.md  FRAME_LATENCY_FIX.md  PER_USER_WALLET_GUIDE.md  QUICKSTART.md  README.md  SOLANA_INTEGRATION.md  SOLANA_SETUP.md  SOLANA_STATUS.md  SOLANA_WALLET_SETUP.md  restart_services.sh  stop_services.sh
backend/: .env  .env.example  .gitignore  API_INTEGRATION.md  fund-wallet.js  package-lock.json  start-server.bat  start-server.ps1
backend/ai_service/: README.md  app.py  client.py  client.sh  pyproject.toml  requirements.txt  run.sh  segmentation_results.json  verify_stream.py
backend/database/migrations/: 001_solana_deposits.sql
backend/pkg/solana/: wallet.go
backend/pkg/user/: user.go
backend/server/: go.mod  main.go  solana_routes.go  start.ps1
backend/server/cryptostuff/: CoreSolanaEchange.go
backend/server/pkg/: ChatHub.go  FeedForwarder.go  PlayerChat.go  Questions.go  QuizHub.go  ai_client.go  solana.go  solana_wallet.go
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/broadcast/: page.tsx
frontend/app/broadcaster/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: betting-panel.tsx  broadcaster-view.tsx  chat-widget.tsx  live-broadcast.tsx  live-chat.tsx  quiz-broadcaster.tsx  quiz-panel.tsx  solana-deposit-card.tsx  solana-deposit.tsx  test-deposit-panel.tsx  video-broadcaster.tsx  wallet-deposit-panel.tsx
frontend/lib/: auth.ts  mongo.ts
server/: go.mod  main.go
server/pkg/: FeedForwarder.go
(+26 files in other folders)
