[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "python-multipart>=0.0.21",
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
